# todo-receipts

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  formatter.py  implementation-plan.md  main.py  notion_client.py  pyproject.toml  state.py
printers/: __init__.py  base.py  console_printer.py
